--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <title>Atividade</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
 </head>
 <body>
     <h1>Exercicio 1</h1>
+   <a href="contato.html"><button>Aperte aqui!</button> </a>
+    <script src="src/script.js"></script>
 </body>
 </html>
